# toxatoxa098

./: .env.example  .gitignore  README.md  mylog.txt  pyproject.toml  requirements.txt
data/: __init__.py  operations.json
src/: decorators.py  external_api.py  generators.py  masks.py  mylog.txt  processing.py  transactions.py  utils.py  widget.py
tests/: conftest.py  main.py  mylog.txt  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
