[tool.poetry]
name = "pythonProject"
version = "0.1.0"
description = ""
authors = ["Anton Masloynok <antoxa.toxa.83@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.14.0"
black = "^24.10.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 119
[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = ['venv']
[tool.black]
line-length = 119
exclude = '\.git'